# Bioinformatics

AlgorithmTest/: .project~  pom.xml
AlgorithmTest/src/: Edge.java  Graph.java  Node.java  Test1.java
Cell3DRendererJOGL/: .classpath  .project
Cell3DRendererJOGL/src/cell3DRenderer/: Camera.java  Cell3DJOGLRenderer.java  Particle.java  Particles4DJOGLRenderer.java  ParticlesObjects.java  Rotation.java  Sphere.java  SpherePosition.java
CellOpticalFlowAmat2013/: .project
CellOpticalFlowAmat2013/src/: SLICinterface.java
OpticalFlowC-Amat2013/: .project  CMakeLists.txt  LICENSE.txt  README.txt  mainOpticalFlow.cpp  syntheticData.rar
OpticalFlowC-Amat2013/cmake/: FindMylib.cmake
OpticalFlowC-Amat2013/mylib/: image.p  water.shed.p
OpticalFlowC-Amat2013/opticalFlow/: CMakeLists.txt  SLIC.cpp  SLIC.h  SLICinterface.cpp  SLICinterface.h  multithreadLBFGS.cpp  multithreadLBFGS.h  opticalFlow.cpp  opticalFlow.h
TestGloballyOptimalGreedy/: .classpath  .project
TestGloballyOptimalGreedy/src/: Edge.java  Feature.java  Main.java  Statistics.java  Track.java  Vector.java  Vertex.java
TestsImages/: .classpath  .project
TestsImages/src/: Frame.java  Main.java  Motion.java  Particle.java  ParticlesMatrix.java  TestingFrames.java  TestingNumberOfCellsPerFrame.java  TrackingCells2D.java  Video2D.java
Tracking3D/: .project
Tracking3D/src/: Associate.java  AssociatedObjectList.java  AssociationMinDistance.java  EventList.java  EventSeeker.java  EventSeekerExample.java  Handler.java  HandlerExemple.java  Main.java  Object3DAdapter.java  ObjectAction.java  PluginTracking.java  TrackingAction.java  TrackingResult.java  TrackingSTP.java  TrackingStrategy.java
Tracking3D/src/trackingInterface/: Action.java  EventSeekerAction.java  EventSeekerStrategyAction.java  Frame.java  Object4D.java  ObjectAction.java  ObjectAction4D.java  Strategy.java  TrackingAction.java  TrackingContext.java  TrackingStrategy.java
Tracking3D/src/trackingPlugin/: Associate.java  AssociatedObjectList.java  Association.java  EventList.java  EventSeeker.java  GenerateChallengeFormat.java  Handler.java  ImageJStatic.java  Log.java  Object3DAdapter.java  ObjectAction.java  ParticlesTrackingResult.java  PluginTracking.java  TrackingAction.java  TrackingResult.java  TrackingStrategy.java
Tracking3D/src/trackingSPT/: EventSeekerAction.java  EventSeekerStrategyAction.java  FeedbackSegmentation.java  MotionField.java  TrackingAction.java  TrackingObject.java  TrackingSPT.java
Tracking3D/src/trackingSPT/actions/: Association.java  AssociationMinDistance.java  AssociationSeeker.java  EventSeeker.java  EventSeekerAssociation.java  EventSeekerExample.java  EventSeekerSpliting.java  Handler.java  HandlerExemple.java  HandlerSimple.java  MergingSimple.java  Splitting.java  SplittingSimple.java  (+1 more)
Tracking3D/src/trackingSTP/: Association.java  AssociationMinDistance.java  CostMatrix.java  EventList.java  EventSeeker.java  EventSeekerExample.java  Handler.java  HandlerExemple.java  MotionField.java  ObjectAction4D.java  Objects3DPopulationAdapter.java  TrackingSTP.java
TrackingPaper/: .classpath  .project
TrackingPaper/bkp/: DataSet.java  test3D_Jaza.java  test3D_testingSets.java
TrackingPaper/src/amal/: DataSet.java  test2D_Giulia.java  test3D_RawChallenge.java  test3D_template.java  test3D_template2.java
presentations/: ipal-slides-template.ppt
reports/: .~lock.Abstract-v2.doc#  .~lock.Abstract.doc#  Abstract-v2.doc  Abstract.doc  abstract-ipal-presentation.txt  abstract-ipal-presentation.txt~  abstract-ipal-presentation~
reports/General-Report_latex/MathExpression_bkp/: main.tex
reports/SimpleTracking3D/: main.aux  main.tex
reports/SimpleTrackingAlgorithm/: main.aux  main.tex
(+245 files in other folders)
